--- a/css/main.css
+++ b/css/main.css
@@ -315,7 +315,7 @@ img {
   margin: 0 128px 112px; }
   #home-a .special .box {
     width: 100%;
-    height: 365px;
+    height: auto;
     background: #fff;
     filter: drop-shadow(0px 0px 30px rgba(0, 0, 0, 0.05));
     border-radius: 8px; }
@@ -601,7 +601,8 @@ img {
       #contact-forms .contact-form .text-fields .text-input {
         padding: 20px 30px;
         border: 1px solid #fff;
-        border-radius: 5px; }
+        border-radius: 5px;
+        filter: drop-shadow(0px 0px 30px rgba(0, 0, 0, 0.05)); }
     #contact-forms .contact-form .btn-submit {
       padding: 16px 71px; }
 
@@ -876,7 +877,7 @@ img {
   #home-a .heading-section {
     margin-top: 60px; }
   #home-a .special {
-    grid-gap: 15px;
+    grid-gap: 10px;
     margin: 0 30px 112px; }
   #home-b .advice-container {
     margin: 0 40px 112px; }
@@ -892,13 +893,15 @@ img {
   #contact-maps {
     margin-top: 100px; } }
 
-@media (max-width: 992px) {
+@media (max-width: 1024px) {
+  #header-home .main-nav li {
+    padding-left: 23px; }
   #header-home .header-container {
     grid-template-columns: 1fr; }
     #header-home .header-container .header-content {
       margin-left: 50px; }
   #header-homesub .main-nav li {
-    padding-left: 30px; }
+    padding-left: 23px; }
   .sticky {
     height: 150px; }
   #home-a .special {
