--- a/css/main.css
+++ b/css/main.css
@@ -915,7 +915,7 @@ img {
         line-height: 40px;
         padding: 30px 30px 25px 30px; }
       #home-b .advice-container .advice-description ul.btn-advice li {
-        margin-right: 20px; }
+        margin-right: 8px; }
       #home-b .advice-container .advice-description ul.btn-advice .btn-primary, #home-b .advice-container .advice-description ul.btn-advice .btn-secondary {
         padding: 10px 25px; }
   #expertise-a .expertise-box {
@@ -1073,7 +1073,7 @@ img {
       max-width: 80%;
       margin: 24px auto 50px auto; }
   #home-a .special {
-    grid-gap: 20pxs;
+    grid-gap: 20px;
     grid-template-columns: repeat(2, 1fr);
     text-align: left;
     margin: 0 42px 112px; }
@@ -1226,7 +1226,7 @@ img {
       line-height: 40px; }
   #contact-boxes .contact-box {
     justify-content: space-evenly;
-    flex-direction: column-reverse;
+    flex-direction: column;
     flex-wrap: nowrap; }
     #contact-boxes .contact-box .box {
       width: 100%; }
