--- a/css/main.css
+++ b/css/main.css
@@ -240,6 +240,23 @@
     #footer-home .footer-contact .contact-btn {
       padding: 16px 96px;
       font-weight: 600; }
+  #footer-home .back-to-top {
+    position: fixed;
+    right: 1rem;
+    bottom: 1rem;
+    border-radius: 100%;
+    background: #0b87C9;
+    padding: 0.5rem;
+    border: none;
+    cursor: pointer; }
+    #footer-home .back-to-top:hover {
+      opacity: 60%; }
+  #footer-home .hidden {
+    display: none; }
+  #footer-home .back-to-top-icon {
+    width: 1rem;
+    height: 1rem;
+    color: #fff; }
 
 * {
   margin: 0;
@@ -859,6 +876,23 @@ img {
     #footer-home .footer-contact .contact-btn {
       padding: 16px 96px;
       font-weight: 600; }
+  #footer-home .back-to-top {
+    position: fixed;
+    right: 1rem;
+    bottom: 1rem;
+    border-radius: 100%;
+    background: #0b87C9;
+    padding: 0.5rem;
+    border: none;
+    cursor: pointer; }
+    #footer-home .back-to-top:hover {
+      opacity: 60%; }
+  #footer-home .hidden {
+    display: none; }
+  #footer-home .back-to-top-icon {
+    width: 1rem;
+    height: 1rem;
+    color: #fff; }
 
 @media (min-width: 1400px) {
   #individual-expertise .individual-images {
