--- a/css/main.css
+++ b/css/main.css
@@ -394,7 +394,7 @@ img {
       display: flex;
       padding: 37px 19px 0px 41px; }
       #home-b .advice-container .advice-description ul.btn-advice li {
-        margin-right: 20px; }
+        margin-right: 10px; }
       #home-b .advice-container .advice-description ul.btn-advice .btn-primary, #home-b .advice-container .advice-description ul.btn-advice .btn-secondary {
         padding: 16px 56px; }
       #home-b .advice-container .advice-description ul.btn-advice .btn-secondary:hover {
@@ -608,7 +608,8 @@ img {
     #contact-forms .contact-form .text-fields {
       padding: 0 30px;
       display: grid;
-      grid-template-areas: 'name email phone' 'message message message';
+      grid-template-areas: 'name email phone'
+ 'message message message';
       grid-gap: 20px;
       margin-bottom: 30px; }
       #contact-forms .contact-form .text-fields .name-input {
@@ -1273,7 +1274,10 @@ img {
     max-width: 90%;
     padding: 15px 0 75px; }
     #contact-forms .contact-form .text-fields {
-      grid-template-areas: 'name name name' 'email email email' 'phone phone phone'  'message message message'; }
+      grid-template-areas: 'name name name'
+ 'email email email'
+ 'phone phone phone' 
+ 'message message message'; }
   #contact-maps {
     margin-top: 75px; }
     #contact-maps .contact-map iframe {
